// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack5 jsx plugin common: assets 1`] = `
{
  "entry.css": "/*!*****************************************************************************************************************************************************************************************************************************************************************************************!*\\
  !*** css ../../../../../node_modules/.pnpm/css-loader@6.7.3_webpack@5.78.0/node_modules/css-loader/dist/cjs.js!../../../../../node_modules/.pnpm/postcss-loader@7.2.4_ijp4qkbu5v6trqezpmptmrsogu/node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./pages/index.css ***!
  \\*****************************************************************************************************************************************************************************************************************************************************************************************/
::before,::after {
    --tw-content: ""}
view,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.-m-_bl_20px_br_ {
    margin: -20px
}
.-mt-2 {
    margin-top: -16rpx
}
.mb-_bl_-20px_br_ {
    margin-bottom: -20px
}
.flex {
    display: flex
}
.grid {
    display: grid
}
.h-10 {
    height: 80rpx
}
.h-_bl_100px_br_ {
    height: 100px
}
.max-h-_bl_100px_br_ {
    max-height: 100px
}
.min-h-_bl_100px_br_ {
    min-height: 100px
}
.w-10 {
    width: 80rpx
}
.w-32 {
    width: 256rpx
}
.w-_bl_100px_br_ {
    width: 100px
}
.w-_bl_200_p__br_ {
    width: 200%
}
.w-_bl_300rpx_br_ {
    width: 300rpx
}
.min-w-_bl_300rpx_br_ {
    min-width: 300rpx
}
.max-w-_bl_300rpx_br_ {
    max-width: 300rpx
}
.grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr))
}
.items-center {
    align-items: center
}
.justify-center {
    justify-content: center
}
.space-y-_bl_1_d_6rem_br_>view + view {
    --tw-space-y-reverse: 0;
    margin-top: calc(51.2rpx * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(51.2rpx * var(--tw-space-y-reverse))
}
.divide-x-_bl_10px_br_>view + view {
    --tw-divide-x-reverse: 0;
    border-right-width: calc(10px * var(--tw-divide-x-reverse));
    border-left-width: calc(10px * calc(1 - var(--tw-divide-x-reverse)))
}
.divide-solid>view + view {
    border-style: solid
}
.divide-_bl__h_010101_br_>view + view {
    --tw-divide-opacity: 1;
    border-color: rgb(1 1 1 / var(--tw-divide-opacity))
}
.rounded-_bl_40px_br_ {
    border-radius: 40px
}
.rounded-md {
    border-radius: 12rpx
}
.border-_bl_10px_br_ {
    border-width: 10px
}
.border-solid {
    border-style: solid
}
.border-_bl__h_098765_br_ {
    --tw-border-opacity: 1;
    border-color: rgb(9 135 101 / var(--tw-border-opacity))
}
.border-opacity-_bl_0_d_44_br_ {
    --tw-border-opacity: 0.44
}
.bg-_bl__h_123456_br_ {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity))
}
.bg-gray-100 {
    --tw-bg-opacity: 1;
    background-color: rgb(243 244 246 / var(--tw-bg-opacity))
}
.bg-pink-500 {
    --tw-bg-opacity: 1;
    background-color: rgb(236 72 153 / var(--tw-bg-opacity))
}
.bg-red-500 {
    --tw-bg-opacity: 1;
    background-color: rgb(239 68 68 / var(--tw-bg-opacity))
}
.bg-opacity-_bl_0_d_54_br_ {
    --tw-bg-opacity: 0.54
}
.p-_bl_20px_br_ {
    padding: 20px
}
.py-2 {
    padding-top: 16rpx;
    padding-bottom: 16rpx
}
.text-_bl_16px_br_ {
    font-size: 16px
}
.text-_bl_20px_br_ {
    font-size: 20px
}
.font-semibold {
    font-weight: 600
}
.leading-_bl_0_d_9_br_ {
    line-height: 0.9
}
.text-_bl__h_dddddd_br_ {
    --tw-text-opacity: 1;
    color: rgb(221 221 221 / var(--tw-text-opacity))
}
.text-_bl__h_ffffff_br_ {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.text-black {
    --tw-text-opacity: 1;
    color: rgb(0 0 0 / var(--tw-text-opacity))
}
.text-white {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.text-opacity-_bl_0_d_19_br_ {
    --tw-text-opacity: 0.19
}
.ring-4 {
    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
}
.ring-pink-300 {
    --tw-ring-opacity: 1;
    --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity))
}
.after_c_ml-0::after {
    content: var(--tw-content);
    margin-left: 0px
}
.after_c_ml-0_d_5::after {
    content: var(--tw-content);
    margin-left: 4rpx
}
.after_c_border-none::after {
    content: var(--tw-content);
    border-style: none
}
.after_c_text-red-500::after {
    content: var(--tw-content);
    --tw-text-opacity: 1;
    color: rgb(239 68 68 / var(--tw-text-opacity))
}
.after_c_content-_bl__dq__a__dq__br_::after {
    --tw-content: "*";
    content: var(--tw-content)
}
.after_c_content-_bl__q_Hello_World_q__br_::after {
    --tw-content: 'Hello World';
    content: var(--tw-content)
}
.after_c_content-_bl__a__br_::after {
    --tw-content: *;
    content: var(--tw-content)
}
@media (prefers-color-scheme: dark) {
    .dark_c_bg-green-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(34 197 94 / var(--tw-bg-opacity))
    }
    .dark_c_bg-zinc-800 {
        --tw-bg-opacity: 1;
        background-color: rgb(39 39 42 / var(--tw-bg-opacity))
    }
}
",
  "entry.js": "/*
 * ATTENTION: The "eval" devtool has been used (maybe by default in mode: "development").
 * This devtool is neither made for production nor for readable output files.
 * It uses "eval()" calls to create a separate source file in the browser devtools.
 * If you are trying to read the output file, select a different devtool (https://webpack.js.org/configuration/devtool/)
 * or disable the default devtool with "devtool: false".
 * If you are looking for production-ready output files, see mode: "production" (https://webpack.js.org/configuration/mode/).
 */
/******/ (() => { // webpackBootstrap
/******/ 	"use strict";
/******/ 	var __webpack_modules__ = ({

/***/ "./pages/index.css":
/*!*************************!*\\
  !*** ./pages/index.css ***!
  \\*************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

eval("__webpack_require__.r(__webpack_exports__);\\n// extracted by mini-css-extract-plugin\\n\\n\\n//# sourceURL=webpack:///./pages/index.css?");

/***/ }),

/***/ "./pages/index.jsx":
/*!*************************!*\\
  !*** ./pages/index.jsx ***!
  \\*************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

eval("__webpack_require__.r(__webpack_exports__);\\n/* harmony export */ __webpack_require__.d(__webpack_exports__, {\\n/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__)\\n/* harmony export */ });\\n/* harmony import */ var react__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! react */ \\"react\\");\\n/* harmony import */ var react__WEBPACK_IMPORTED_MODULE_0___default = /*#__PURE__*/__webpack_require__.n(react__WEBPACK_IMPORTED_MODULE_0__);\\n/* harmony import */ var _index_css__WEBPACK_IMPORTED_MODULE_1__ = __webpack_require__(/*! ./index.css */ \\"./pages/index.css\\");\\n\\n\\nconst View = props => {\\n  return /*#__PURE__*/React.createElement(\\"div\\", props);\\n};\\nconst Index = () => {\\n  const [flag] = (0,react__WEBPACK_IMPORTED_MODULE_0__.useState)(true);\\n  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(View, {\\n    className: \\"after_c_border-none after_c_content-_bl__q_Hello_World_q__br_ a\\"\\n  }, \\"after:border-none\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"after_c_content-_bl__dq__a__dq__br_ after_c_ml-0_d_5 after_c_text-red-500 b\\"\\n  }, \\"yellow\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"after_c_content-_bl__a__br_ after_c_ml-0_d_5 after_c_text-red-500 aspect-w-16\\"\\n  }, /*#__PURE__*/React.createElement(View, null, \\"aspect\\"), /*#__PURE__*/React.createElement(View, null, \\"w\\"), /*#__PURE__*/React.createElement(View, null, \\"16\\")), /*#__PURE__*/React.createElement(View, {\\n    className: \\"bg-gray-100 dark_c_bg-zinc-800 h-10 w-10\\",\\n    hoverClass: \\"bg-red-500 dark_c_bg-green-500\\"\\n  }), /*#__PURE__*/React.createElement(View, {\\n    className: flag ? \\"p-_bl_20px_br_ -mt-2 mb-_bl_-20px_br_ \\" : ''\\n  }, \\"p-[20px] -mt-2 mb-[-20px] margin\\\\u7684jit \\\\u53EF\\\\u4E0D\\\\u80FD\\\\u8FD9\\\\u4E48\\\\u5199 -m-[20px]\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"space-y-_bl_1_d_6rem_br_ text-_bl_16px_br_ w-_bl_200_p__br_\\"\\n  }, /*#__PURE__*/React.createElement(View, {\\n    className: \\"w-_bl_300rpx_br_ text-black text-opacity-_bl_0_d_19_br_\\"\\n  }, \\"w-[300rpx] text-black text-opacity-[0.19]\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"min-w-_bl_300rpx_br_ max-h-_bl_100px_br_ text-_bl_20px_br_ leading-_bl_0_d_9_br_\\"\\n  }, \\"min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"max-w-_bl_300rpx_br_ min-h-_bl_100px_br_ text-_bl__h_dddddd_br_\\"\\n  }, \\"max-w-[300rpx] min-h-[100px] text-[#dddddd]\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"flex items-center justify-center h-_bl_100px_br_ w-_bl_100px_br_ rounded-_bl_40px_br_ bg-_bl__h_123456_br_ bg-opacity-_bl_0_d_54_br_ text-_bl__h_ffffff_br_\\"\\n  }, \\"Hello\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"border-_bl_10px_br_ border-_bl__h_098765_br_ border-solid border-opacity-_bl_0_d_44_br_\\"\\n  }, \\"border-[10px] border-[#098765] border-solid border-opacity-[0.44]\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"grid grid-cols-3 divide-x-_bl_10px_br_ divide-_bl__h_010101_br_ divide-solid\\"\\n  }, /*#__PURE__*/React.createElement(View, null, \\"1\\"), /*#__PURE__*/React.createElement(View, null, \\"2\\"), /*#__PURE__*/React.createElement(View, null, \\"3\\")), /*#__PURE__*/React.createElement(View, {\\n    className: \\"w-32 py-2 rounded-md font-semibold text-white bg-pink-500 ring-4 ring-pink-300\\"\\n  }, \\"Default\\")), /*#__PURE__*/React.createElement(View, {\\n    className: \\"test\\"\\n  }, \\"test\\"));\\n};\\n/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = (Index);\\n\\n//# sourceURL=webpack:///./pages/index.jsx?");

/***/ }),

/***/ "react":
/*!************************!*\\
  !*** external "react" ***!
  \\************************/
/***/ ((module) => {

module.exports = react;

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/compat get default export */
/******/ 	(() => {
/******/ 		// getDefaultExport function for compatibility with non-harmony modules
/******/ 		__webpack_require__.n = (module) => {
/******/ 			var getter = module && module.__esModule ?
/******/ 				() => (module['default']) :
/******/ 				() => (module);
/******/ 			__webpack_require__.d(getter, { a: getter });
/******/ 			return getter;
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
/******/ 	
/******/ 	// startup
/******/ 	// Load entry module and return exports
/******/ 	// This entry module can't be inlined because the eval devtool is used.
/******/ 	var __webpack_exports__ = __webpack_require__("./pages/index.jsx");
/******/ 	
/******/ })()
;",
}
`;

exports[`webpack5 jsx plugin common: errors 1`] = `[]`;

exports[`webpack5 jsx plugin common: warnings 1`] = `[]`;

exports[`webpack5 jsx plugin disabled true: assets 1`] = `
{
  "entry.css": "/*!*****************************************************************************************************************************************************************************************************************************************************************************************!*\\
  !*** css ../../../../../node_modules/.pnpm/css-loader@6.7.3_webpack@5.78.0/node_modules/css-loader/dist/cjs.js!../../../../../node_modules/.pnpm/postcss-loader@7.2.4_ijp4qkbu5v6trqezpmptmrsogu/node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./pages/index.css ***!
  \\*****************************************************************************************************************************************************************************************************************************************************************************************/
*, ::before, ::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.-m-\\[20px\\] {
    margin: -20px
}
.-mt-2 {
    margin-top: -16rpx
}
.mb-\\[-20px\\] {
    margin-bottom: -20px
}
.flex {
    display: flex
}
.grid {
    display: grid
}
.h-10 {
    height: 80rpx
}
.h-\\[100px\\] {
    height: 100px
}
.max-h-\\[100px\\] {
    max-height: 100px
}
.min-h-\\[100px\\] {
    min-height: 100px
}
.w-10 {
    width: 80rpx
}
.w-32 {
    width: 256rpx
}
.w-\\[100px\\] {
    width: 100px
}
.w-\\[200\\%\\] {
    width: 200%
}
.w-\\[300rpx\\] {
    width: 300rpx
}
.min-w-\\[300rpx\\] {
    min-width: 300rpx
}
.max-w-\\[300rpx\\] {
    max-width: 300rpx
}
.grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr))
}
.items-center {
    align-items: center
}
.justify-center {
    justify-content: center
}
.space-y-\\[1\\.6rem\\] > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(51.2rpx * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(51.2rpx * var(--tw-space-y-reverse))
}
.divide-x-\\[10px\\] > :not([hidden]) ~ :not([hidden]) {
    --tw-divide-x-reverse: 0;
    border-right-width: calc(10px * var(--tw-divide-x-reverse));
    border-left-width: calc(10px * calc(1 - var(--tw-divide-x-reverse)))
}
.divide-solid > :not([hidden]) ~ :not([hidden]) {
    border-style: solid
}
.divide-\\[\\#010101\\] > :not([hidden]) ~ :not([hidden]) {
    --tw-divide-opacity: 1;
    border-color: rgb(1 1 1 / var(--tw-divide-opacity))
}
.rounded-\\[40px\\] {
    border-radius: 40px
}
.rounded-md {
    border-radius: 12rpx
}
.border-\\[10px\\] {
    border-width: 10px
}
.border-solid {
    border-style: solid
}
.border-\\[\\#098765\\] {
    --tw-border-opacity: 1;
    border-color: rgb(9 135 101 / var(--tw-border-opacity))
}
.border-opacity-\\[0\\.44\\] {
    --tw-border-opacity: 0.44
}
.bg-\\[\\#123456\\] {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity))
}
.bg-gray-100 {
    --tw-bg-opacity: 1;
    background-color: rgb(243 244 246 / var(--tw-bg-opacity))
}
.bg-pink-500 {
    --tw-bg-opacity: 1;
    background-color: rgb(236 72 153 / var(--tw-bg-opacity))
}
.bg-red-500 {
    --tw-bg-opacity: 1;
    background-color: rgb(239 68 68 / var(--tw-bg-opacity))
}
.bg-opacity-\\[0\\.54\\] {
    --tw-bg-opacity: 0.54
}
.p-\\[20px\\] {
    padding: 20px
}
.py-2 {
    padding-top: 16rpx;
    padding-bottom: 16rpx
}
.text-\\[16px\\] {
    font-size: 16px
}
.text-\\[20px\\] {
    font-size: 20px
}
.font-semibold {
    font-weight: 600
}
.leading-\\[0\\.9\\] {
    line-height: 0.9
}
.text-\\[\\#dddddd\\] {
    --tw-text-opacity: 1;
    color: rgb(221 221 221 / var(--tw-text-opacity))
}
.text-\\[\\#ffffff\\] {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.text-black {
    --tw-text-opacity: 1;
    color: rgb(0 0 0 / var(--tw-text-opacity))
}
.text-white {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity))
}
.text-opacity-\\[0\\.19\\] {
    --tw-text-opacity: 0.19
}
.ring-4 {
    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
}
.ring-pink-300 {
    --tw-ring-opacity: 1;
    --tw-ring-color: rgb(249 168 212 / var(--tw-ring-opacity))
}
.after\\:ml-0::after {
    content: var(--tw-content);
    margin-left: 0px
}
.after\\:ml-0\\.5::after {
    content: var(--tw-content);
    margin-left: 4rpx
}
.after\\:border-none::after {
    content: var(--tw-content);
    border-style: none
}
.after\\:text-red-500::after {
    content: var(--tw-content);
    --tw-text-opacity: 1;
    color: rgb(239 68 68 / var(--tw-text-opacity))
}
.after\\:content-\\[\\"\\*\\"\\]::after {
    --tw-content: "*";
    content: var(--tw-content)
}
.after\\:content-\\[\\'Hello_World\\'\\]::after {
    --tw-content: 'Hello World';
    content: var(--tw-content)
}
.after\\:content-\\[\\*\\]::after {
    --tw-content: *;
    content: var(--tw-content)
}
@media (prefers-color-scheme: dark) {
    .dark\\:bg-green-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(34 197 94 / var(--tw-bg-opacity))
    }
    .dark\\:bg-zinc-800 {
        --tw-bg-opacity: 1;
        background-color: rgb(39 39 42 / var(--tw-bg-opacity))
    }
}
",
  "entry.js": "/*
 * ATTENTION: The "eval" devtool has been used (maybe by default in mode: "development").
 * This devtool is neither made for production nor for readable output files.
 * It uses "eval()" calls to create a separate source file in the browser devtools.
 * If you are trying to read the output file, select a different devtool (https://webpack.js.org/configuration/devtool/)
 * or disable the default devtool with "devtool: false".
 * If you are looking for production-ready output files, see mode: "production" (https://webpack.js.org/configuration/mode/).
 */
/******/ (() => { // webpackBootstrap
/******/ 	"use strict";
/******/ 	var __webpack_modules__ = ({

/***/ "./pages/index.css":
/*!*************************!*\\
  !*** ./pages/index.css ***!
  \\*************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

eval("__webpack_require__.r(__webpack_exports__);\\n// extracted by mini-css-extract-plugin\\n\\n\\n//# sourceURL=webpack:///./pages/index.css?");

/***/ }),

/***/ "./pages/index.jsx":
/*!*************************!*\\
  !*** ./pages/index.jsx ***!
  \\*************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

eval("__webpack_require__.r(__webpack_exports__);\\n/* harmony export */ __webpack_require__.d(__webpack_exports__, {\\n/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__)\\n/* harmony export */ });\\n/* harmony import */ var react__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! react */ \\"react\\");\\n/* harmony import */ var react__WEBPACK_IMPORTED_MODULE_0___default = /*#__PURE__*/__webpack_require__.n(react__WEBPACK_IMPORTED_MODULE_0__);\\n/* harmony import */ var _index_css__WEBPACK_IMPORTED_MODULE_1__ = __webpack_require__(/*! ./index.css */ \\"./pages/index.css\\");\\n\\n\\nconst View = props => {\\n  return /*#__PURE__*/React.createElement(\\"div\\", props);\\n};\\nconst Index = () => {\\n  const [flag] = (0,react__WEBPACK_IMPORTED_MODULE_0__.useState)(true);\\n  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(View, {\\n    className: \\"after:border-none after:content-['Hello_World'] a\\"\\n  }, \\"after:border-none\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"after:content-[\\\\\\"*\\\\\\"] after:ml-0.5 after:text-red-500 b\\"\\n  }, \\"yellow\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"after:content-[*] after:ml-0.5 after:text-red-500 aspect-w-16\\"\\n  }, /*#__PURE__*/React.createElement(View, null, \\"aspect\\"), /*#__PURE__*/React.createElement(View, null, \\"w\\"), /*#__PURE__*/React.createElement(View, null, \\"16\\")), /*#__PURE__*/React.createElement(View, {\\n    className: \\"bg-gray-100 dark:bg-zinc-800 h-10 w-10\\",\\n    hoverClass: \\"bg-red-500 dark:bg-green-500\\"\\n  }), /*#__PURE__*/React.createElement(View, {\\n    className: flag ? 'p-[20px] -mt-2 mb-[-20px] ' : ''\\n  }, \\"p-[20px] -mt-2 mb-[-20px] margin\\\\u7684jit \\\\u53EF\\\\u4E0D\\\\u80FD\\\\u8FD9\\\\u4E48\\\\u5199 -m-[20px]\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"space-y-[1.6rem] text-[16px] w-[200%]\\"\\n  }, /*#__PURE__*/React.createElement(View, {\\n    className: \\"w-[300rpx] text-black text-opacity-[0.19]\\"\\n  }, \\"w-[300rpx] text-black text-opacity-[0.19]\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]\\"\\n  }, \\"min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"max-w-[300rpx] min-h-[100px] text-[#dddddd]\\"\\n  }, \\"max-w-[300rpx] min-h-[100px] text-[#dddddd]\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"flex items-center justify-center h-[100px] w-[100px] rounded-[40px] bg-[#123456] bg-opacity-[0.54] text-[#ffffff]\\"\\n  }, \\"Hello\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"border-[10px] border-[#098765] border-solid border-opacity-[0.44]\\"\\n  }, \\"border-[10px] border-[#098765] border-solid border-opacity-[0.44]\\"), /*#__PURE__*/React.createElement(View, {\\n    className: \\"grid grid-cols-3 divide-x-[10px] divide-[#010101] divide-solid\\"\\n  }, /*#__PURE__*/React.createElement(View, null, \\"1\\"), /*#__PURE__*/React.createElement(View, null, \\"2\\"), /*#__PURE__*/React.createElement(View, null, \\"3\\")), /*#__PURE__*/React.createElement(View, {\\n    className: \\"w-32 py-2 rounded-md font-semibold text-white bg-pink-500 ring-4 ring-pink-300\\"\\n  }, \\"Default\\")), /*#__PURE__*/React.createElement(View, {\\n    className: \\"test\\"\\n  }, \\"test\\"));\\n};\\n/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = (Index);\\n\\n//# sourceURL=webpack:///./pages/index.jsx?");

/***/ }),

/***/ "react":
/*!************************!*\\
  !*** external "react" ***!
  \\************************/
/***/ ((module) => {

module.exports = react;

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/compat get default export */
/******/ 	(() => {
/******/ 		// getDefaultExport function for compatibility with non-harmony modules
/******/ 		__webpack_require__.n = (module) => {
/******/ 			var getter = module && module.__esModule ?
/******/ 				() => (module['default']) :
/******/ 				() => (module);
/******/ 			__webpack_require__.d(getter, { a: getter });
/******/ 			return getter;
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
/******/ 	
/******/ 	// startup
/******/ 	// Load entry module and return exports
/******/ 	// This entry module can't be inlined because the eval devtool is used.
/******/ 	var __webpack_exports__ = __webpack_require__("./pages/index.jsx");
/******/ 	
/******/ })()
;",
}
`;

exports[`webpack5 jsx plugin disabled true: errors 1`] = `[]`;

exports[`webpack5 jsx plugin disabled true: warnings 1`] = `[]`;
